Fix select text to have sufficient contrast for accessibility

--- a/src/components/SignIn/SignIn.css
+++ b/src/components/SignIn/SignIn.css
@@ -28,7 +28,7 @@ input {
 
 select {
   border: none;
-  color: #0487d9;
+  color: #2b1b19;
   cursor: pointer;
   font-size: 2vh;
   margin-top: 2%;
